--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,5 +12,12 @@
   margin-left: auto;
   margin-right: auto;
   width: 20%;
-
 }
+
+.main-content h1,
+.main-content h2,
+.main-content h3,
+.main-content h4,
+.main-content h5,
+.main-content h6 {
+  color: #3e92cc; }
