--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,10 @@
       <img src="{{site.logo}}" id="logo"/>
       <h1 class="project-name">SpeechBrain</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
+        <a href="#" class="btn">GitHub</a>
+        <a href="#" class="btn">Get Started</a>
+        <a href="#" class="btn">Documentation</a>
+  
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
