--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,9 @@
       <img src="{{site.logo}}" id="logo"/>
       <h1 class="project-name">SpeechBrain</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <!-- <a href="#" class="btn">GitHub</a>
+        <a href="#" class="btn">Team</a>
         <a href="#" class="btn">Get Started</a>
-        <a href="#" class="btn">Documentation</a>-->
+        <a href="#" class="btn">Documentation</a>
 
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
