--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <img src="{{site.logo}}" id="logo"/>
       <h1 class="project-name">SpeechBrain</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <a href="#" class="btn">Team</a>
+        <a href="#Why-SpeechBrain" class="btn">Team</a>
         <a href="#" class="btn">Get Started</a>
         <a href="#" class="btn">Documentation</a>
 
