--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,11 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <img src="{{site.logo}}" id="logo"/>
+      <img src="{{site.logo}}" id="logo" />
       <h1 class="project-name">SpeechBrain</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <!-- <a href="https://speechbrain.github.io/team.md" class="btn">Team</a>
-        <a href="#" class="btn">Get Started</a>
-        <a href="#" class="btn">Documentation</a> -->
+      <a href="index.html" class="btn">Home</a>
+      <a href="team.html" class="btn">Our Team</a>
 
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
