--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,3 +47,58 @@ h4 {
   font-family: "Montserrat";
   font-weight: lighter;
 }
+
+/* Three columns side by side */
+.column3 {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/* Three columns side by side */
+.column2 {
+  float: left;
+  width: 50%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column2 .column3 {
+    width: 100%;
+    display: block;
+  }
+}
+
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+  text-align: center;
+}
+
+/* Clear floats */
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  margin-top: -20px;
+  color: #3e92cc;
+}
+
+.container h2{
+  font-size: 25px;
+
+}
+
+.team_pic {
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height:200px;
+}
