--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,15 +52,15 @@ h4 {
 .column3 {
   float: left;
   width: 33.3%;
-  margin-bottom: 16px;
+  margin-bottom: 50px;
   padding: 0 8px;
 }
 
 /* Three columns side by side */
 .column2 {
   float: left;
-  width: 50%;
-  margin-bottom: 16px;
+  width: 49.8%;
+  margin-bottom: 25px;
   padding: 0 8px;
 }
 
@@ -78,6 +78,7 @@ h4 {
   text-align: center;
 }
 
+
 /* Clear floats */
 .container::after, .row::after {
   content: "";
@@ -86,8 +87,13 @@ h4 {
 }
 
 .title {
-  margin-top: -20px;
   color: #3e92cc;
+  font-size:24px;
+}
+
+.affiliation {
+  margin-top: -20px;
+
 }
 
 .container h2{
@@ -98,7 +104,6 @@ h4 {
 .team_pic {
 
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   max-height:200px;
 }
