Pushing updates w.r.t partners

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,7 +52,7 @@ h4 {
 .column3 {
   float: left;
   width: 33.3%;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
   padding: 0 8px;
 }
 
@@ -88,16 +88,17 @@ h4 {
 
 .title {
   color: #3e92cc;
-  font-size:24px;
+  font-size:18px;
+  margin-top: -20px;
 }
 
 .affiliation {
   margin-top: -20px;
-
+  font-size:18px;
 }
 
 .container h2{
-  font-size: 25px;
+  font-size: 20px;
 
 }
 
