--- a/css/style.css
+++ b/css/style.css
@@ -2707,6 +2707,11 @@ h6 {
     color: #222222;
     border-color: #fff; }
 
+.left_side_text h6 {
+
+  text-align:justify;
+}
+
 /* End Main Button Area css
 ============================================================================================ */
 /*---------------------------------------------------- */
@@ -2736,6 +2741,7 @@ h6 {
     font-size: 20px;
     margin-bottom: 15px; }
   .work_item p {
+    text-align: justify;
     max-width: 310px;
     margin: auto; }
   .work_item:hover i {
