--- a/css/style.css
+++ b/css/style.css
@@ -899,6 +899,58 @@ button:focus {
   background-color: #3bacf0;
   border-color: #eee; }
 
+
+.speaker-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+}
+
+.speaker-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 550px;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+
+.speaker-image {
+  width: 100%;
+  max-width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.speaker-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.speaker-info {
+  text-align: left;
+  justify-content: left;
+}
+
+.speaker-info h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.speaker-info p {
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: justify;
+}
+
+  
 /*============ Start Blog Single Styles  =============*/
 .single-post-area .social-links {
   padding-top: 10px; }
